# BankDepositSelectionSystem

./: .gitattributes  .gitignore  BankDepositSelectionSystem.cpp  BankDepositSelectionSystem.h  CMakeLists.txt  LICENSE  README.md
data/: deposits.db
include/: AppController.h  Bank.h  Client.h  Deposit.h  Factory.h  UserInterface.h
include/Analysis/: BasicDepositAnalyzer.h  IDepositAnalyzer.h
include/Database/: IDatabase.h  SQLiteDatabase.h
include/Recommendation/: FlexibleTermStrategy.h  IRecommendationStrategy.h  TopRateStrategy.h
include/Report/: HTMLReportGenerator.h  IReportGenerator.h  TextReportGenerator.h
sqlite3/lib/: sqlite3.exp  sqlite3.lib
src/: AppController.cpp  Bank.cpp  Client.cpp  Deposit.cpp  Factory.cpp  UserInterface.cpp
src/Analysis/: BasicDepositAnalyzer.cpp
src/Database/: SQLiteDatabase.cpp
src/Recommendation/: FlexibleTermStrategy.cpp  TopRateStategy.cpp
src/Report/: HTMLReportGenerator.cpp  TextReportGenerator.cpp
